--- a/RESTCapstone/app/src/main/AndroidManifest.xml
+++ b/RESTCapstone/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ca.gbc.mobile.stanpak.restcapstone" >
+    package="ca.gbc.mobile.ianpadilla.research_monster" >
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
         android:allowBackup="true"
@@ -8,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".LoginActivity"
+            android:name=".SignInapp"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,8 +20,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ProfileAcitivty"
-            android:label="@string/title_activity_profile_acitivty" >
+            android:name=".Profile"
+            android:label="@string/title_activity_profile" >
+        </activity>
+        <activity
+            android:name=".AllProjects"
+            android:label="@string/title_activity_all_projects" >
         </activity>
     </application>
 
